# drf-course-api

./: LICENSE  README.md  db.sqlite3  pyproject.toml  requirements.txt  schema.yml
api/: admin.py  filters.py  models.py  serializers.py  signals.py  tasks.py  tests.py  urls.py  views.py
api/migrations/: 0001_initial.py
drf_course/: celery.py  settings.py  urls.py
