[project]
name = "drf-course-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "asgiref==3.8.1",
    "autopep8==2.3.2",
    "celery>=5.4.0",
    "django==5.1.1",
    "django-extensions==3.2.3",
    "django-filter>=25.1",
    "django-redis>=5.4.0",
    "django-silk==5.3.2",
    "djangorestframework==3.15.2",
    "djangorestframework-simplejwt==5.5.0",
    "drf-spectacular>=0.28.0",
    "gprof2dot==2025.4.14",
    "isort>=6.0.1",
    "pillow==10.4.0",
    "pycodestyle==2.13.0",
    "pyjwt==2.9.0",
    "redis[hiredis]>=6.0.0",
    "sqlparse==0.5.1",
    "tzdata==2024.2",
]
